gitops/apps/rhcl-demo-split/app-3-gateways/resources/06-referencegrants.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-mcp-extension
  namespace: openshift-ingress
  annotations:
    argocd.argoproj.io/sync-wave: "23"
spec:
  from:
    - group: mcp.kuadrant.io
      kind: MCPGatewayExtension
      namespace: mcp-system
  to:
    - group: gateway.networking.k8s.io
      kind: Gateway
