gitops/apps/rhcl-demo-split/app-3-gateways/resources/05-routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rhcl-workshop-gw
  namespace: openshift-ingress
  annotations:
    argocd.argoproj.io/sync-wave: "18"
spec:
  host: rhcl-workshop.REPLACE_ME_EXTERNAL_BASE_DOMAIN
  to:
    kind: Service
    name: rhcl-workshop-gw-istio
  port:
    targetPort: 443
  tls:
    termination: passthrough
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rhcl-workshop-gw-oidc
  namespace: openshift-ingress
  annotations:
    argocd.argoproj.io/sync-wave: "18"
spec:
  host: oidc-rhcl-workshop.REPLACE_ME_EXTERNAL_BASE_DOMAIN
  to:
    kind: Service
    name: rhcl-workshop-gw-istio
  port:
    targetPort: 443
  tls:
    termination: passthrough
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rhcl-workshop-gw-grafana
  namespace: openshift-ingress
  annotations:
    argocd.argoproj.io/sync-wave: "18"
spec:
  host: grafana-rhcl-workshop.REPLACE_ME_EXTERNAL_BASE_DOMAIN
  to:
    kind: Service
    name: rhcl-workshop-gw-istio
  port:
    targetPort: 443
  tls:
    termination: passthrough
